# ECG-Analyzer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/: CODEOWNERS
DataAccessor/: CMakeLists.txt  DataAccessor.cpp  DataAccessor.h  HowTo.txt  wfdb.cpp  wfdb.h  wfdb_macros.h
DataController/: DataController.cpp  DataController.h
Modules/: CMakeLists.txt
Modules/ECG-Baseline/: ECG_Baseline.cpp  ECG_Baseline.h  Filters.cpp  Filters.h
Modules/HEART_CLASS/: heart_class.cpp  heart_class.h
Modules/HRV1/: HRV1.cpp  HRV1.h
Modules/HRV2/: HRV2.cpp  HRV2.h
Modules/HRV_DFA/: DFA.cpp  DFA.h  data.mat  lab3.m  main.cpp  nsr001.txt
Modules/HRV_DFA/dfa_qt/: dfa_qt.pro
Modules/Rpeaks/: CMakeLists.txt  HilbertTransform.cpp  HilbertTransform.h  PanTompkins.cpp  PanTompkins.h
Modules/ST-SEGMENT/: st-segment.cpp  st-segment.h
Modules/Sample/: Sample.cpp  Sample.h
Modules/TWaveAlt/: TWaveAlt.cpp  TWaveAlt.h
Modules/WAVES/: main_waves.cpp  waves.cpp  waves.h
UI/: MainWindow.cpp  MainWindow.h  Tabsgraphs.cpp  Tabsgraphs.h  ViewModelUI.cpp  ViewModelUI.h  ViewmodelUI.cpp  ViewmodelUI.h  chartCallout.cpp  chartCallout.h  generaltab.cpp  generaltab.h  tabdialog.cpp  tabdialog.h  textBrowserName.cpp  textBrowserName.h
UI/Visualization/: ECG_chartCallout.cpp  ECG_chartCallout.h  HRV2_chartCallout.cpp  HRV2_chartCallout.h  Peaks_chartCallout.cpp  Peaks_chartCallout.h  SDPointcare_chartCallout.cpp  SDPointcare_chartCallout.h  SignalUtils.cpp  SignalUtils.h
UI/Visualization/HRV1/: HRV1ParamsTab.cpp  HRV1ParamsTab.h
UI/Visualization/Utils/: SignalUtils.cpp  SignalUtils.h  TableUtils.cpp  TableUtils.h
lib/gsl/: AUTHORS  ChangeLog  NEWS  THANKS  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  gsl_math.h  gsl_minmax.h  gsl_pow_int.h  gsl_precision.h  mdate-sh
lib/gsl/block/: ChangeLog  fprintf_source.c  init.c  test.c  test_complex_source.c  test_source.c
lib/gsl/bspline/: ChangeLog  bspline.c  greville.c  test.c
lib/gsl/bst/: avl.c  bst.c  rb.c  test.c  trav.c
lib/gsl/cdf/: beta.c  betainv.c  chisq.c  chisqinv.c  fdist.c  fdistinv.c  gamma.c  gammainv.c  gauss.c  gaussinv.c  geometric.c  hypergeometric.c  nbinomial.c  poisson.c  tdist.c  tdistinv.c  test.c
lib/gsl/combination/: ChangeLog
lib/gsl/complex/: gsl_complex_math.h  math.c  test.c  test_source.c
lib/gsl/doc/: TODO  autoconf.rst  blas.rst  bspline.rst  cblas.rst  cheb.rst  combination.rst  complex.rst  conf.py  const.rst  contrib.rst  debug.rst  dht.rst  diff.rst  dwt.rst  eigen.rst  err.rst  fdl.rst  fft.rst  filter.rst  gpl.rst  gsl-ref.info  histogram.rst  ieee754.rst  include.rst  index.rst  integration.rst  interp.rst  intro.rst  linalg.rst  lls.rst  math.rst  min.rst  montecarlo.rst  movstat.rst  multimin.rst  multiroots.rst  multiset.rst  nls.rst  ntuple.rst  (+47 more)
lib/gsl/eigen/: francis.c  gen.c  genherm.c  gensymm.c  gensymmv.c  nonsymmv.c  sort.c  symm.c  test.c
lib/gsl/fft/: gsl_fft.h  gsl_fft_complex.h
lib/gsl/filter/: TODO  gaussian.c  impulse.c  median.c  ringbuf.c  rmedian.c  test.c  test_gaussian.c  test_impulse.c  test_median.c  test_rmedian.c
lib/gsl/histogram/: calloc_range.c  calloc_range2d.c  copy.c  copy2d.c  maxval.c  maxval2d.c  oper.c  oper2d.c  stat.c  stat2d.c
lib/gsl/ieee-utils/: env.c  read.c
lib/gsl/integration/: ChangeLog  TODO  chebyshev.c  chebyshev2.c  cquad.c  exponential.c  fixed.c  gegenbauer.c  glfixed.c  hermite.c  jacobi.c  laguerre.c  legendre.c  qag.c  qagp.c  qags.c  qawc.c  qawo.c  qaws.c  qk41.c  qng.c  rational.c  romberg.c  test.c
lib/gsl/interpolation/: bicubic.c  bilinear.c  interp.c  interp2d.c  spline2d.c  test.c  test2d.c
lib/gsl/linalg/: TODO  apply_givens.c  balance.c  bidiag.c  cholesky.c  cholesky_band.c  cholesky_common.c  choleskyc.c  cod.c  condest.c  hermtd.c  hessenberg.c  hesstri.c  householder.c  householdercomplex.c  inline.c  invtri.c  invtri_complex.c  ldlt.c  ldlt_band.c  lq.c  lu.c  lu_band.c  luc.c  mcholesky.c  pcholesky.c  ptlq.c  ql.c  qr.c  qr_band.c  qr_ud.c  qr_ur.c  qr_uu.c  qr_uz.c  qrc.c  qrpt.c  recurse.h  rqr.c  rqrc.c  svd.c  (+20 more)
lib/gsl/matrix/: ChangeLog  copy.c  copy_source.c  file_source.c  init.c  init_source.c  oper_complex_source.c  oper_source.c  prop.c  prop_source.c  submatrix_source.c  swap.c  swap_complex_source.c  swap_source.c  test.c  test_complex_source.c  test_source.c  view_source.c
lib/gsl/movstat/: TODO  alloc.c  apply.c  deque.c  fill.c  funcacc.c  madacc.c  medacc.c  mmacc.c  movQn.c  movSn.c  movmad.c  movmean.c  movmedian.c  movminmax.c  movqqr.c  movsum.c  movvariance.c  mvacc.c  qnacc.c  qqracc.c  ringbuf.c  snacc.c  sumacc.c  test.c  test_Qn.c  test_Sn.c  test_mad.c  test_mean.c  test_median.c  test_minmax.c  test_qqr.c  test_sum.c  test_variance.c
lib/gsl/multifit/: ChangeLog  TODO  convergence.c  covar.c  fdfridge.c  fdfsolver.c  fdjac.c  fsolver.c  gcv.c  gradient.c  linear_common.c  lmder.c  lmiterate.c  lmmisc.c  lmniel.c  lmpar.c  lmset.c  lmutil.c  multilinear.c  multireg.c  multirobust.c  multiwlinear.c  robust_wfun.c  test.c  test_bard.c  test_beale.c  test_biggs.c  test_box.c  test_boxbod.c  test_brown1.c  test_brown2.c  test_brown3.c  test_eckerle.c  test_enso.c  test_exp1.c  test_filip.c  test_gaussian.c  test_hahn1.c  test_helical.c  test_jennrich.c  (+31 more)
lib/gsl/multifit_nlinear/: TODO  cholesky.c  common.c  convergence.c  covar.c  dogleg.c  fdf.c  fdfvv.c  fdjac.c  lm.c  mcholesky.c  nielsen.c  qr.c  qrsolv.c  scaling.c  subspace2D.c  (+42 more)
(+317 files in other folders)
